syntax = "proto3";
package blit.blit;

import "google/protobuf/any.proto";

option go_package = "blit/x/blit/types";

// Tasks are like cron jobs that can be scheduled to run at a specific time or interval.
message Task {
  string creator             =  1;
  uint64 id = 2;
  string activate_after = 5; 
  string expire_after = 6; 
  string interval = 7; 
  int32 max_runs = 8; 
  bool disable_on_error = 9; 
  bool enabled = 10; 
  int32 gas_limit = 11; 
  string gas_price = 12; 
  repeated google.protobuf.Any messages = 13;
}
